# llm-finetuning

./: .gitignore  .pre-commit-config.yaml  lightning_llama_chat.ipynb  pyproject.toml  pytorch_basic.ipynb  pytorch_lightning_basic.ipynb
src/azure_envs/: lightning_transformers.yaml
src/azure_envs/conda_envs/: lightning_transformers_conda.yaml
src/azure_jobs/: 240328_first.py  240328_first.yaml
src/models/: lightning_llama_chat.py
src/notebooks/: lightning_llama_chat_fitting.ipynb  lightning_llama_chat_inference.ipynb  load_example.ipynb
